fixed layout issues

--- a/static/global.css
+++ b/static/global.css
@@ -117,6 +117,8 @@ header {
 }
 
 main {
+  line-height: 1.5;
+  padding: 2rem;
   border-bottom: 1px solid var(--black);
 }
 
